--- a/src/components/common/search_bar/SearchBar.module.css
+++ b/src/components/common/search_bar/SearchBar.module.css
@@ -17,3 +17,19 @@
   font-size: 1rem;
   font-weight: 400;
 }
+
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 11.5px 20px;
+  }
+  .input {
+    font-size: 0.875rem;
+  }
+}
+
+@media (max-width: 743px) {
+  .input {
+    font-size: 0.75rem;
+  }
+}
