--- a/src/styles/CardListRenderStyle.module.css
+++ b/src/styles/CardListRenderStyle.module.css
@@ -1,6 +1,6 @@
 .listRenderContainer {
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 440px)); /* 3개의 카드 */
+  grid-template-columns: repeat(3, minmax(260px, 440px)); /* 3개의 카드 */
   justify-content: space-between;
   width: 100%; /* 부모 컨테이너의 너비 */
   gap: 80px 30px;
@@ -34,5 +34,17 @@
 @media (max-width: 1400px) {
   .listRenderContainer {
     gap: 50px 30px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .listRenderContainer {
+    grid-template-columns: repeat(2, minmax(170px, 440px));
+  }
+}
+
+@media (max-width: 800px) {
+  .listRenderContainer {
+    gap: 20px 20px;
   }
 }
