--- a/src/styles/MyCardTotalStateStyle.module.css
+++ b/src/styles/MyCardTotalStateStyle.module.css
@@ -50,3 +50,17 @@
 .gradeContainer::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+
+
+@media (max-width: 1000px) {
+  .sectionUserState {
+    gap: 10px 0px;
+  }
+  .SaleState {
+    font-size: 1.25rem;
+  }
+  .totalPhotoCount {
+    font-size: 1.125rem;
+  }
+}
+
