--- a/src/styles/PageHeaderStyle.module.css
+++ b/src/styles/PageHeaderStyle.module.css
@@ -16,11 +16,11 @@
   padding: 60px 0px 20px 0px;
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px solid #EEEEEE
+  border-bottom: 2px solid #EEEEEE;
+  gap: 0px 25px;
 }
 
 .headerText {
-  width: 100%;
   text-align: left;
   font-size: 3.875rem;
   font-family: "BR B";
@@ -32,4 +32,38 @@
   max-width: 440px;
   width: 100%;
   height: 60px;
+}
+
+@media (max-width: 1000px) {
+  .headerText {
+    font-size: 3rem;
+  }
+  .headerBtnSize {
+    max-width: 342px;
+  }
+}
+
+@media (max-width: 500px) {
+  .headerText {
+    display: none;
+  }
+
+  .header {
+    /* max-width: 460px; */
+    width: 100%;
+    position: fixed;
+    display: flex;
+    left: 0;
+    right: 0;
+    bottom: 40px;
+    padding: 15px;
+    border-bottom: none;
+    z-index: 1000;
+  }
+
+  .headerBtnSize {
+    max-width: 460px;
+    width: 100%;
+  }
+
 }
