--- a/src/page/login/index.module.css
+++ b/src/page/login/index.module.css
@@ -18,6 +18,8 @@
 
     box-sizing: border-box;
     margin-bottom: 40px;
+
+    cursor: pointer;
   }
   .loginForm {
     display: flex;
@@ -60,6 +62,8 @@
 
     box-sizing: border-box;
     margin-bottom: 40px;
+
+    cursor: pointer;
   }
   .loginForm {
     display: flex;
@@ -102,6 +106,8 @@
 
     box-sizing: border-box;
     margin-bottom: 40px;
+
+    cursor: pointer;
   }
   .loginForm {
     display: flex;
