Feat: 마무리 필터기능 및 모바일 필터기능 적용

--- a/src/styles/ModalMobileFilter.module.css
+++ b/src/styles/ModalMobileFilter.module.css
@@ -50,6 +50,18 @@
   width: 100%;
   height: 100%;
   color: #a4a4a4;
+  overflow-y: auto;
+}
+
+.selectorBox::-webkit-scrollbar {
+  width: 8px;
+  margin-left: 5px;
+}
+
+.selectorBox::-webkit-scrollbar-thumb {
+  background-color: #5a5a5a;
+  border-radius: 8px;
+
 }
 
 .list {
