--- a/src/styles/CardStyle.module.css
+++ b/src/styles/CardStyle.module.css
@@ -116,7 +116,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px 0px;
-
 }
 
 .price,
@@ -180,6 +179,8 @@
   }
   .cardInfo {
     font-size: 0.875rem;
+    gap: 5px 0px;
+    padding: 10px 0px;
   }
   .infoLeftBox,
   .nickname,
@@ -194,5 +195,18 @@
   }
   .logoImage {
     display: none;
+  }
+
+  .common,
+  .rare,
+  .superrare,
+  .legendary {
+    font-size: 0.625rem;
+    font-weight: 300;
+  }
+
+  .quntitySection {
+    padding: 10px 0px 0px 0px;
+    gap: 5px 0px;
   }
 }
