--- a/src/styles/CardPageStyle.module.css
+++ b/src/styles/CardPageStyle.module.css
@@ -5,13 +5,39 @@
   width: 100%;
 }
 
-.sectionFilter {
+.sectionFilter,
+.sectionMarketFilter {
   width: 100%;
   display: inline-flex;
   flex-direction: row;
   align-items: center;
   padding: 20px 0px 60px 0px;
   gap: 0px 50px;
+}
+
+.mobileMarketSectionFilter {
+  display: none;
+  width: 100%;
+  min-height: 110px;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+  padding: 20px 0px;
+}
+
+.mobileSearchBarSection {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #5a5a5a;
+}
+
+.mobileFilterSection {
+  width: 100%;
+  height: 100%;
+  padding-top: 15px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .mobileSectionFilter {
@@ -41,7 +67,8 @@
   gap: 0px 25px;
 }
 
-.dropDownBox {
+.dropDownBox,
+.marketDropDownBox {
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -49,9 +76,13 @@
   gap: 0px 25px;
 }
 
+.marketFilterButton {
+  display: none;
+}
 
 @media (max-width: 1200px) {
-  .sectionFilter {
+  .sectionFilter,
+  .sectionMarketFilter {
     gap: 0px 20px;
     padding: 20px 0px 40px 0px;
   }
@@ -67,11 +98,33 @@
   .dropDownBox {
     gap: 0px 5px;
   }
+  .FilterBox {
+    gap: 0px 5px;
+  }
+  .sectionMarketFilter {
+    justify-content: space-between;
+    gap: 10px
+  }
+  .marketDropDownBox {
+    display: none;
+  }
+
+  .marketFilterButton {
+    display: flex;
+  }
 }
 
 @media (max-width: 744px) {
   .sectionFilter {
     display: none;
+  }
+
+  .dropDownBox {
+    display: none;
+  }
+
+  .filterButton {
+    display: flex;
   }
 
   .mobileSectionFilter {
@@ -80,6 +133,12 @@
 }
 
 @media (max-width: 500px) {
+  .sectionMarketFilter {
+    display: none;
+  }
+  .mobileMarketSectionFilter {
+    display: flex;
+  }
   .mainContainer {
     padding: 0px 15px;
   }
