Stlye: 반응형 디자인 완료

--- a/src/styles/CardDetailStyle.module.css
+++ b/src/styles/CardDetailStyle.module.css
@@ -56,3 +56,11 @@
   max-width: 440px;
   width: 100%;
 }
+
+
+@media (max-width: 1000px) {
+  .cardDetail {
+    flex-direction: column;
+    gap: 20px 0px;
+  }
+}
