--- a/src/feature/card_state_control/regist/modals/components/DescInputArea.module.css
+++ b/src/feature/card_state_control/regist/modals/components/DescInputArea.module.css
@@ -64,3 +64,9 @@
 .textArea::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+
+@media (max-width: 1000px) {
+  .textArea {
+    font-size: 0.875rem;
+  }
+}
