--- a/src/feature/card_state_control/regist/modals/components/DropdownStyle.module.css
+++ b/src/feature/card_state_control/regist/modals/components/DropdownStyle.module.css
@@ -1,3 +1,8 @@
+.dropdownContainer {
+  position: relative;
+  width: 100%;
+}
+
 .dropdownNormal {
   display: flex;
   position: relative;
@@ -21,7 +26,6 @@
   }
 }
 
-
 .arrowIcon {
   width: 24px;
   height: 24px;
@@ -42,14 +46,9 @@
   background-color: #111111;
 }
 
-@media (max-width: 1199px) {
-  .dropdownMenu {
-    font-size: 14px;
+@media (max-width: 1000px) {
+  .borderButton {
+    font-size: 0.875rem;
   }
 }
 
-@media (max-width: 743px) {
-  .dropdownMenu {
-    font-size: 12px;
-  }
-}
