--- a/src/styles/ModalCardStateControlStyle.module.css
+++ b/src/styles/ModalCardStateControlStyle.module.css
@@ -128,7 +128,7 @@
 .inputArea {
   padding-top: 40px;
   width: 100%;
-  height: 159px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -140,8 +140,7 @@
 
 .btnContainer {
   width: 100%;
-  min-height: 100px;
-  padding-top: 40px;
+  min-height: 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -207,6 +206,19 @@
   .cardContainer {
     padding-right: 10px;
   }
+  .hopeExchangeHeader {
+    font-size: 1.375rem;
+  }
+  .dropdownBox,
+  .inputArea {
+    font-size: 1rem;
+  }
+  .inputArea {
+    padding-top: 30px;
+  }
+  .cardDetail {
+    padding-top: 40px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -218,6 +230,16 @@
   }
   .mobileSectionFilter {
     display: flex;
+  }
+  .cardDetail {
+    flex-direction: column;
+    gap: 20px 0px;
+  }
+  .imgWrapper {
+    max-width: 100%;
+  }
+  .hopeExchangeHeader {
+    padding-top: 0px;
   }
 }
 
@@ -231,5 +253,9 @@
   }
   .cardHeader {
     font-size: 1.625rem;
+  }
+  .dropdownContainer {
+    flex-direction: column;
+    gap: 30px 0px;
   }
 }
