--- a/src/styles/PageHeaderStyle.module.css
+++ b/src/styles/PageHeaderStyle.module.css
@@ -92,12 +92,19 @@
     width: 100%;
     position: fixed;
     display: flex;
+
     left: 0;
     right: 0;
-    bottom: 40px;
-    padding: 15px;
+    bottom: 0;
+    padding: 20px 15px 40px 15px;
     border-bottom: none;
     z-index: 1000;
+    /* background : rgba(0, 0, 0, 0.5); */
+    background: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 0.0) 0%, 
+    rgba(0, 0, 0, 0.5) 30%, 
+    rgba(0, 0, 0, 1) 100%
+    );
   }
 
   .headerBtnSize {
