--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -32,3 +32,15 @@ a {
 li {
   list-style: none;
 }
+
+/* Webkit 기반 브라우저 (Chrome, Safari 등) */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
